--- a/my-component/demo/index.html
+++ b/my-component/demo/index.html
@@ -14,7 +14,7 @@ subject to an additional IP rights grant found at http://polymer.github.io/PATEN
     <meta name="viewport" content="width=device-width, minimum-scale=1.0, initial-scale=1.0, user-scalable=yes">
     <title>my-component Demo</title>
     <script src="../../webcomponentsjs/webcomponents-lite.min.js"></script>
-    <link rel="import" href="../my-component.html">
+    <link rel="import" href="../config.html">
   </head>
   <body unresolved>
 
