--- a/my-component/my-component.html
+++ b/my-component/my-component.html
@@ -1,32 +1,3 @@
-<!--
-@license
-Copyright (c) 2015 The Polymer Project Authors. All rights reserved.
-This code may only be used under the BSD style license found at http://polymer.github.io/LICENSE.txt
-The complete set of authors may be found at http://polymer.github.io/AUTHORS.txt
-The complete set of contributors may be found at http://polymer.github.io/CONTRIBUTORS.txt
-Code distributed by Google as part of the polymer project is also
-subject to an additional IP rights grant found at http://polymer.github.io/PATENTS.txt
--->
-
-<script src="../systemjs/dist/system.js"></script>
-<script src="config.js"></script>
-<link rel="import" href="../polymer/polymer.html">
-<link rel="import" href="../promise-polyfill/promise-polyfill.html">
-
-<!--
-An element providing a solution to no problem in particular.
-
-Example:
-
-    <my-component></my-component>
-
-Example:
-
-    <my-component></my-component>
-
-@demo demo/index.html
--->
-
 <dom-module id="my-component">
   <template>
     <style>
@@ -35,55 +6,12 @@ Example:
         box-sizing: border-box;
       }
 
+      button paper-spinner-lite {
+        height: 1.2em;
+        width: 1.2em;
+      }
     </style>
 
-    <button on-click="_handleClick">my-component</button>
+    <button on-click="_handleClick">my-component <paper-spinner-lite active></paper-spinner-lite></button>
   </template>
-
-  <script>
-    Promise.all([
-      System.import('moment')
-    ]).then(function(modules) {
-      var moment = modules[0];
-
-      Polymer({
-        is: 'my-component',
-
-        properties: {
-        },
-
-        // Element Lifecycle
-
-        ready: function() {
-          // `ready` is called after all elements have been configured, but
-          // propagates bottom-up. This element's children are ready, but parents
-          // are not.
-          //
-          // This is the point where you should make modifications to the DOM (when
-          // necessary), or kick off any processes the element wants to perform.
-        },
-
-        attached: function() {
-          // `attached` fires once the element and its parents have been inserted
-          // into a document.
-          //
-          // This is a good place to perform any work related to your element's
-          // visual state or active behavior (measuring sizes, beginning animations,
-          // loading resources, etc).
-        },
-
-        detached: function() {
-          // The analog to `attached`, `detached` fires when the element has been
-          // removed from a document.
-          //
-          // Use this to clean up anything you did in `attached`.
-        },
-
-        // Element Behavior
-        _handleClick: function() {
-          console.log('my-component: moment version: ' + moment.version);
-        }
-      });
-    });
-  </script>
 </dom-module>
